--- a/style/site.css
+++ b/style/site.css
@@ -81,6 +81,9 @@ nav ul li{
     text-align: center;
     box-sizing:border-box;
 }
+nav a{
+    color: black;
+}
 .interestrow{
     box-sizing: border-box;
     width: 100%;
@@ -98,7 +101,7 @@ nav ul li{
     //width: 200px;
     text-align: right;
     color: black;
-    background-color: gray;
+    background-color: lightslategrey;
 
 }
 .subsection{
@@ -121,7 +124,7 @@ nav ul li{
 }
 .group{
     box-sizing: border-box;
-    background-color: azure;
+    background-color: lightslategrey;
     //padding: 10px;
     min-width: 400px;
     width: 50%;
@@ -142,4 +145,8 @@ nav ul li{
     .group{
         width: 100%;
     }
+}
+a{
+    color: red;
+    text-decoration: none;
 }
