--- a/style/site.css
+++ b/style/site.css
@@ -25,8 +25,10 @@ header{
     //padding-top: 20px;
     height: 100%;
     max-width: 800px;
-    background-color: white;
+    //background-color: white;
     margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 #contentback{
     z-index: -1;
@@ -36,7 +38,7 @@ header{
     left: 0;
     margin: 0 auto;
     max-width: 800px;
-    background-color: white;
+    //background-color: white;
     height: 100%;
     right: 0;
 }
@@ -45,7 +47,7 @@ header{
 }
 #top{
     //height: calc(100% - 50px);
-    min-height: calc(100% - 50px);
+    min-height: calc(100% - 70px);
     //box-sizing: border-box;
     overflow: hidden;
 }
@@ -91,6 +93,9 @@ nav a{
     position: relative;
     //background-attachment: fixed;
 }
+.interestrow.front{
+    background-size: cover;
+}
 .interestrow span{
     font-family: Arial Black, Impact;
     padding: 10px;
@@ -127,11 +132,13 @@ nav a{
     background-color: lightslategrey;
     //padding: 10px;
     min-width: 400px;
-    width: 50%;
-    float: left;
+    //width: 50%;
+    //float: left;
+    margin-bottom: 10px;
 }
 .group h2{
-    padding-left: 10px;
+    margin: 0;
+    padding: 10px;
 }
 #panel{
     padding: 10px;
@@ -145,6 +152,9 @@ nav a{
     .group{
         width: 100%;
     }
+}
+.whitebg{
+    background-color: white;
 }
 a{
     color: red;
