--- a/style/site.css
+++ b/style/site.css
@@ -24,7 +24,7 @@ header{
     //box-shadow: inset 0px 7px 10px -5px rgba(50, 50, 50, 0.75);
     //padding-top: 20px;
     height: 100%;
-    max-width: 800px;
+    max-width: 700px;
     //background-color: white;
     margin: 0 auto;
     margin-top: 20px;
@@ -55,7 +55,7 @@ header{
 }
 footer{
     background-color: white;
-    height: 50px;
+    min-height: 50px;
     padding: 10px;
 }
 nav{
@@ -81,7 +81,7 @@ nav ul li{
     list-style: none;
     float:left;
     width: 25%;
-    min-width: 140px;
+    min-width: 100px;
     line-height: 40px;
     padding: 2px;
     text-align: center;
@@ -100,7 +100,9 @@ nav a{
 }
 .interestrow.front{
     background-size: cover;
+    background-position: left top;
     margin-bottom: 5px;
+    background-color:  white;
 }
 .interestrow span{
     font-family: Arial Black, Impact;
@@ -136,10 +138,7 @@ nav a{
 .group{
     box-sizing: border-box;
     background-color: lightslategrey;
-    //padding: 10px;
     min-width: 400px;
-    //width: 50%;
-    //float: left;
     margin-bottom: 10px;
     border-radius: 2px;
 }
@@ -160,6 +159,7 @@ nav a{
         z-index: 5;
         display: block;
         background-color: lightgray;
+        width: 100%;
     }
     #mobilemenu{
         display: block !important;
@@ -191,7 +191,7 @@ nav a{
     background-color: white;
 }
 a{
-    color: red;
+    color: black;
     text-decoration: none;
 
 }
@@ -209,8 +209,6 @@ a.button:hover{
 
 }
 a:hover{
-    color: black;
-    text-decoration: underline;
 }
 nav ul li:hover{
     background-color: lightgray;
