--- a/style/site.css
+++ b/style/site.css
@@ -119,7 +119,7 @@ nav a{
     //width: 200px;
     text-align: right;
     color: black;
-    background-color: lightslategrey;
+    background-color: #706F6D;
 
 }
 .subsection{
@@ -155,14 +155,15 @@ nav a{
 }
 .group{
     box-sizing: border-box;
-    background-color: lightslategrey;
-    min-width: 400px;
+    background-color: #706F6D;
+    //min-width: 400px;
     margin-bottom: 10px;
     border-radius: 2px;
 }
 .group h2{
     margin: 0;
     padding: 10px;
+    border-left: 5px solid red;
 }
 #panel{
     padding: 10px;
@@ -205,6 +206,14 @@ nav a{
         width: 100%;
     }
 }
+@media only screen and (max-width: 425px){
+    .subsection img{
+        display: none;
+    }
+    #wcg{
+        display: none;
+    }
+}
 .whitebg{
     background-color: white;
 }
@@ -212,6 +221,10 @@ a{
     color: black;
     text-decoration: none;
 
+}
+a.show{
+    color: blue;
+    text-decoration: underline;
 }
 a.button{
     background-color: darkgrey;
@@ -255,4 +268,13 @@ nav ul li:hover{
     font-size: 20px;
     line-height: 25px;
     margin: 10px;
+}
+#wcg{
+    width: 405px;
+    height: 190px;
+    overflow: auto;
+    //width="405px" height="190px"
+}
+#wcg html body div{
+    width: auto !important;
 }
