--- a/style/site.css
+++ b/style/site.css
@@ -13,7 +13,7 @@ body{
 }
 header{
     text-align:center;
-    border-left: 5px solid red;
+    border-top: 5px solid red;
     padding: 10px;
     box-shadow:         0px 7px 10px -5px rgba(50, 50, 50, 0.75);
     font-size: 30px;
@@ -119,7 +119,7 @@ nav a{
     //width: 200px;
     text-align: right;
     color: black;
-    background-color: #706F6D;
+    background-color: darkgray;
 
 }
 .subsection{
@@ -155,7 +155,7 @@ nav a{
 }
 .group{
     box-sizing: border-box;
-    background-color: #706F6D;
+    background-color: darkgray;
     //min-width: 400px;
     margin-bottom: 10px;
     border-radius: 2px;
