--- a/style/site.css
+++ b/style/site.css
@@ -6,8 +6,10 @@ h4{
     width: auto;
 }
 body{
-    background: #000 url(../images/background.png) repeat;
+    //background: #000 url(../images/background.png) repeat;
     background-attachment: fixed;
+    //background-color: #303030;
+    background-image: linear-gradient(to top, #000000 0%, #8A8A8A 100%);
     height: 100%;
     margin: 0;
 }
@@ -15,9 +17,9 @@ header{
     text-align:center;
     border-top: 5px solid red;
     padding: 10px;
-    box-shadow:         0px 7px 10px -5px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 7px 10px -5px rgba(0, 0, 0, 0.75);
     font-size: 30px;
-    background-color: whitesmoke;
+    background-color: #EEEEEE;
 }
 #content{
     box-sizing: border-box;
@@ -59,7 +61,7 @@ header{
     overflow: hidden;
 }
 footer{
-    background-color: white;
+    background-color: #EEEEEE;
     min-height: 50px;
     padding: 10px;
 }
@@ -121,6 +123,10 @@ nav a{
     color: black;
     background-color: darkgray;
 
+}
+.groupcontent{
+    box-sizing: border-box;
+    background-color: lightgray;
 }
 .subsection{
     overflow: auto;
@@ -237,8 +243,9 @@ a.button{
     border-radius: 2px;
 }
 a.button:hover{
-    margin-left: 1px;
-    margin-right: 3px;
+    //margin-left: 1px;
+    //margin-right: 3px;
+    background-color: lightgrey;
 }
 a:hover{
 }
@@ -280,4 +287,10 @@ nav ul li:hover{
 }
 .hover{
     cursor:pointer;
+}
+.disable-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
