--- a/style/site.css
+++ b/style/site.css
@@ -1,5 +1,6 @@
 html{
     height: 100%;
+    font-family: Arial Black, Impact;
 }
 h4{
     margin: 0;
@@ -9,13 +10,14 @@ body{
     //background: #000 url(../images/background.png) repeat;
     background-attachment: fixed;
     //background-color: #303030;
-    background-image: linear-gradient(to top, #000000 0%, #8A8A8A 100%);
+    //background-image: linear-gradient(to top, #000000 0%, #8A8A8A 100%);
+    background-image: linear-gradient(to bottom right, #100000 0%, #300000 10%, #100000 25%, #300000 40%, #100000 60%, #300000 85%, #100000 100%);
     height: 100%;
     margin: 0;
 }
 header{
     text-align:center;
-    border-top: 5px solid red;
+    border-top: 5px solid rgb(200,25,28);
     padding: 10px;
     box-shadow:         0px 7px 10px -5px rgba(0, 0, 0, 0.75);
     font-size: 30px;
@@ -32,6 +34,7 @@ header{
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 2px;
+    font-size: 13px;
 }
 #contentback{
     z-index: -1;
@@ -169,7 +172,7 @@ nav a{
 .group h2{
     margin: 0;
     padding: 10px;
-    border-left: 5px solid red;
+    border-left: 5px solid rgb(200,25,28);;
 }
 #panel{
     padding: 10px;
@@ -236,11 +239,12 @@ a.button{
     background-color: darkgrey;
     color: black;
     padding: 5px;
-    margin: 2px;
+    margin: 5px;
     border-width: 1px;
     border-color: black;
     border-style: solid;
     border-radius: 2px;
+    white-space: nowrap;
 }
 a.button:hover{
     //margin-left: 1px;
