--- a/style/site.css
+++ b/style/site.css
@@ -1,27 +1,23 @@
 html{
     height: 100%;
-    font-family: Arial Black, Impact;
 }
 h4{
     margin: 0;
     width: auto;
 }
 body{
-    //background: #000 url(../images/background.png) repeat;
+    background: #000 url(../images/background.png) repeat;
     background-attachment: fixed;
-    //background-color: #303030;
-    //background-image: linear-gradient(to top, #000000 0%, #8A8A8A 100%);
-    background-image: linear-gradient(to bottom right, #100000 0%, #300000 10%, #100000 25%, #300000 40%, #100000 60%, #300000 85%, #100000 100%);
     height: 100%;
     margin: 0;
 }
 header{
     text-align:center;
-    border-top: 5px solid rgb(200,25,28);
+    border-top: 5px solid red;
     padding: 10px;
-    box-shadow:         0px 7px 10px -5px rgba(0, 0, 0, 0.75);
+    box-shadow:         0px 7px 10px -5px rgba(50, 50, 50, 0.75);
     font-size: 30px;
-    background-color: #EEEEEE;
+    background-color: whitesmoke;
 }
 #content{
     box-sizing: border-box;
@@ -34,7 +30,6 @@ header{
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 2px;
-    font-size: 13px;
 }
 #contentback{
     z-index: -1;
@@ -64,7 +59,7 @@ header{
     overflow: hidden;
 }
 footer{
-    background-color: #EEEEEE;
+    background-color: white;
     min-height: 50px;
     padding: 10px;
 }
@@ -127,10 +122,6 @@ nav a{
     background-color: darkgray;
 
 }
-.groupcontent{
-    box-sizing: border-box;
-    background-color: lightgray;
-}
 .subsection{
     overflow: auto;
     box-sizing: border-box;
@@ -172,7 +163,7 @@ nav a{
 .group h2{
     margin: 0;
     padding: 10px;
-    border-left: 5px solid rgb(200,25,28);;
+    border-left: 5px solid red;
 }
 #panel{
     padding: 10px;
@@ -239,17 +230,15 @@ a.button{
     background-color: darkgrey;
     color: black;
     padding: 5px;
-    margin: 5px;
+    margin: 2px;
     border-width: 1px;
     border-color: black;
     border-style: solid;
     border-radius: 2px;
-    white-space: nowrap;
 }
 a.button:hover{
-    //margin-left: 1px;
-    //margin-right: 3px;
-    background-color: lightgrey;
+    margin-left: 1px;
+    margin-right: 3px;
 }
 a:hover{
 }
@@ -291,10 +280,4 @@ nav ul li:hover{
 }
 .hover{
     cursor:pointer;
-}
-.disable-select {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
